pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotAssignFixedProperty3.pkl
amends "../basic/fixedProperty2.pkl"

p = new {
  ...new Dynamic { name = "Osprey" }
}
